--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,6 +46,8 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
-    "msw": "^2.0.8"
+    "eslint": "^8.54.0",
+    "msw": "^2.0.8",
+    "typescript": "^5.3.2"
   }
 }
